--- a/app/src/main/res/drawable/favorites.xml
+++ b/app/src/main/res/drawable/favorites.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_selected="false"  android:drawable="@drawable/ic_favorite_border_black_24dp" />
-    <item android:state_selected="true" android:drawable="@drawable/ic_favorite_black_24dp" />
+    <item android:drawable="@drawable/ic_favorite_black_24dp" android:state_selected="true">
+        <color android:color="?android:textColorPrimary" />
+    </item>
 
 </selector>
