--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -20,11 +20,11 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/composesrecycler"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:background="?android:colorBackground" />
+                android:layout_height="match_parent" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
         <com.google.android.material.appbar.AppBarLayout
+            android:background="?android:colorBackground"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:elevation="0dp">
@@ -32,10 +32,10 @@
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:background="?android:colorBackground"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
                 <LinearLayout
+                    android:background="@drawable/bottom_line"
                     android:id="@+id/banner"
                     app:layout_collapseMode="parallax"
                     android:orientation="vertical"
@@ -43,7 +43,6 @@
                     android:layout_height="wrap_content">
                     <TextView
                         android:drawablePadding="5dp"
-                        android:drawableStart="@drawable/ic_google"
                         android:id="@+id/message"
                         android:textColor="?android:textColorPrimary"
                         android:fontFamily="@font/lato_light"
@@ -60,7 +59,7 @@
                         <TextView
                             android:id="@+id/update"
                             android:foreground="?attr/selectableItemBackground"
-                            android:textColor="@color/colorPrimaryDark"
+                            android:textColor="@color/colorAccent"
                             android:padding="10dp"
                             android:text="Atuazlizar"
                             android:layout_width="wrap_content"
