--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
+
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -13,27 +14,21 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-
-
-
         <com.google.android.material.appbar.AppBarLayout
+            android:animateLayoutChanges="true"
+            android:background="?android:colorBackground"
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:elevation="0dp"
             >
+
             <com.google.android.material.appbar.CollapsingToolbarLayout
                 android:id="@+id/collapsetoolbar"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="?android:colorBackground"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
-                <LinearLayout
-                    android:paddingBottom="?attr/actionBarSize"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
 
                     <de.hdodenhof.circleimageview.CircleImageView
                         android:layout_margin="10dp"
@@ -44,40 +39,29 @@
                         android:contentDescription="Profile picture"
                         android:fitsSystemWindows="true"
                         android:tooltipText="Alterar foto de perfil"
-                        app:civ_border_width="3dp" />
+                        app:civ_border_width="0dp" />
 
-
-
-
-                </LinearLayout>
-
-                <androidx.appcompat.widget.Toolbar
-                    android:elevation="0dp"
-                    android:background="?android:colorBackground"
-                    android:layout_gravity="bottom"
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content" >
-
-                </androidx.appcompat.widget.Toolbar>
-
-                <com.google.android.material.tabs.TabLayout
-                    android:animateLayoutChanges="true"
-                    android:layout_gravity="bottom"
-                    android:id="@+id/usertabs"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentBottom="true"
-                    app:tabIndicatorFullWidth="true"
-                    app:tabMode="auto"
-                    app:tabGravity="center"
-                    app:tabSelectedTextColor="@color/colorPrimary"
-                    app:tabTextColor="?android:textColorHint" />
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
 
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/usertabs"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_gravity="bottom"
+                app:tabIconTint="?android:textColorPrimary"
+                app:tabIndicatorColor="?android:textColorPrimary"
+                app:tabIndicatorFullWidth="true"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="?android:textColorPrimary"
+                app:tabTextColor="?android:textColorHint" />
 
-
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:visibility="gone" />
 
         </com.google.android.material.appbar.AppBarLayout>
 
