--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -10,8 +10,14 @@
         android:layout_height="match_parent">
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <androidx.appcompat.widget.Toolbar
+                android:id="@+id/toolbar"
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:visibility="gone" />
             <LinearLayout
                 android:visibility="gone"
                 android:layout_width="wrap_content"
@@ -135,13 +141,14 @@
                     app:cardCornerRadius="10dp"
                     android:id="@+id/background"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     app:cardElevation="0dp">
 
                     <LinearLayout
+                        android:layout_height="match_parent"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
+                        android:padding="15dp"
                         android:gravity="center"
                         android:orientation="vertical">
 
