--- a/app/src/main/res/menu/newquotemenu.xml
+++ b/app/src/main/res/menu/newquotemenu.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/salvar"
-        android:iconTint="@color/colorAccent"
         android:title="Salvar"
-        app:showAsAction="always" />
+        app:showAsAction="always"
+
+        />
 </menu>
