--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -16,20 +16,15 @@
         <item name="snackbarStyle">@style/AppSnackbar</item>
 
     </style>
-    <style name="AppThemeUser" parent="Theme.MaterialComponents.DayNight">
-        <item name="android:fontFamily">@font/lato_regular</item>
-        <item name="colorPrimary">@color/purple_400</item>
-        <item name="colorPrimaryDark">@color/purple_800</item>
-        <item name="colorAccent">@color/deep_purple_A200</item>
-        <item name="android:statusBarColor">?android:colorBackground</item>
-        <item name="android:navigationBarColor">?android:colorBackground</item>
-        <item name="android:windowAnimationStyle">@style/AppTheme.Animation</item>
-        <item name="alertDialogStyle">@style/AppTheme.AlertDialog</item>
-        <item name="toolbarStyle">@style/AppToolbar</item>
-        <item name="searchViewStyle">@style/Searchtheme</item>
-        <item name="android:windowContentTransitions">true</item>
-        <item name="snackbarStyle">@style/AppSnackbar</item>
 
+    <style name="TabsTheme" parent="Widget.Design.TabLayout">
+        <item name="tabIndicatorFullWidth">false</item>
+        <item name="tabIndicatorColor">?android:textColor</item>
+        <item name="tabSelectedTextColor">?android:textColor</item>
+        <item name="tabTextColor">?android:textColorHint</item>
+        <item name="tabIconTint">?android:textColorPrimary</item>
+        <item name="tabMode">auto</item>
+        <item name="android:animateLayoutChanges">true</item>
     </style>
 
     <style name="AppSnackbar" parent="Widget.MaterialComponents.Snackbar">
@@ -88,6 +83,12 @@
 
     <style name="AppToolbar" parent="Widget.AppCompat.Toolbar">
         <item name="android:elevation">3dp</item>
+        <item name="titleTextAppearance">@style/ToolbarTitle</item>
+        <item name="backgroundColor">?android:colorBackground</item>
+    </style>
+
+    <style name="AppActionBar" parent="Widget.AppCompat.ActionBar">
+        <item name="backgroundColor">?android:colorBackground</item>
         <item name="titleTextAppearance">@style/ToolbarTitle</item>
     </style>
 
