--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
-
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -38,6 +37,7 @@
                         android:layout_height="150dp"
                         android:contentDescription="Profile picture"
                         android:fitsSystemWindows="true"
+                        android:transitionName="profilepic"
                         android:tooltipText="Alterar foto de perfil"
                         app:civ_border_width="0dp" />
 
