--- a/app/src/main/res/layout/quote_recycler.xml
+++ b/app/src/main/res/layout/quote_recycler.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout>
-    <RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+
+    <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
         xmlns:android="http://schemas.android.com/apk/res/android"
-        android:orientation="vertical"
+        android:layout_margin="10dp"
+        app:cardBackgroundColor="?android:colorBackground"
+        app:cardCornerRadius="10dp"
+        app:cardElevation="0dp"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -20,8 +24,5 @@
             android:layout_height="match_parent" />
 
 
-
-
-
-    </RelativeLayout>
+    </androidx.cardview.widget.CardView>
 </layout>
