--- a/app/src/main/res/layout/user_profile.xml
+++ b/app/src/main/res/layout/user_profile.xml
@@ -1,108 +1,24 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="?android:colorBackground"
-        tools:context=".view.fragments.ProfileFragment">
+        android:layout_height="match_parent">
 
-        <ProgressBar
-            android:id="@+id/loading"
-            style="?android:attr/progressBarStyleHorizontal"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:layout_gravity="center"
-            android:indeterminate="false"
-            android:max="100"
-            android:progress="0"
-            android:progressDrawable="@drawable/circle" />
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize" />
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/myquotesrecycler"
+        <include
+            android:id="@+id/profileView"
+            layout="@layout/fragment_profile"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="?android:colorBackground"
-            android:paddingStart="0dp"
-            android:paddingEnd="0dp"
-            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />
-
-        <com.github.mmin18.widget.RealtimeBlurView
-            android:id="@+id/rootblur"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"
-            app:realtimeBlurRadius="50dp"
-            app:realtimeOverlayColor="@color/transparent" />
+            android:layout_below="@id/toolbar" />
+    </RelativeLayout>
 
 
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/appbarlayout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="?android:colorBackground"
-            app:elevation="0dp"
-            android:fitsSystemWindows="true">
-
-
-
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/collapsetoolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:contentScrim="?android:colorBackground"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:titleEnabled="false">
-
-                <LinearLayout
-                    android:layout_marginTop="34dp"
-                    app:layout_collapseMode="parallax"
-                    android:padding="10dp"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:orientation="horizontal">
-
-
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/profilepic"
-                        android:layout_width="120dp"
-                        android:layout_height="130dp"
-                        android:layout_gravity="center"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:padding="5dp"
-                        android:tooltipText="Clique na foto para alterá-la"
-                        android:transitionName="profilepic"
-                        app:civ_border_color="@color/colorAccent"
-                        app:civ_border_width="1dp" />
-
-                    <TextView
-                        android:id="@+id/posts"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:padding="5dp"
-                        android:textAlignment="center"
-                        android:textSize="20sp" />
-
-                </LinearLayout>
-                <androidx.appcompat.widget.Toolbar
-                    app:layout_collapseMode="pin"
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    app:title="@string/username"/>
-
-
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
 </layout>
 
