--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -19,6 +19,9 @@
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/composesrecycler"
+                android:padding="16dp"
+                tools:itemCount="10"
+                tools:listitem="@layout/quotescard"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent" />
         </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
@@ -34,49 +37,14 @@
                 android:layout_height="wrap_content"
                 app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-                <LinearLayout
-                    android:background="@drawable/bottom_line"
-                    android:id="@+id/banner"
-                    app:layout_collapseMode="parallax"
-                    android:orientation="vertical"
+                <androidx.appcompat.widget.SearchView
+                    android:id="@+id/home_search"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="10dp"
+                    android:background="@drawable/round"
+                    app:iconifiedByDefault="false"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-                    <TextView
-                        android:drawablePadding="5dp"
-                        android:id="@+id/message"
-                        android:textColor="?android:textColorPrimary"
-                        android:fontFamily="@font/lato_light"
-                        android:padding="10dp"
-                        android:textSize="16sp"
-                        android:text="Uma nova atualização está disponível"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"/>
-                    <LinearLayout
-                        android:orientation="horizontal"
-                        android:layout_gravity="end"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content">
-                        <TextView
-                            android:id="@+id/update"
-                            android:foreground="?attr/selectableItemBackground"
-                            android:textColor="@color/colorAccent"
-                            android:padding="10dp"
-                            android:text="Atuazlizar"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-                        <TextView
-                            android:id="@+id/dismiss"
-                            android:foreground="?attr/selectableItemBackground"
-                            android:textColor="?android:attr/textColorHint"
-                            android:padding="10dp"
-                            android:text="Deixar para depois"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"/>
-
-                    </LinearLayout>
-
-
-                </LinearLayout>
+                    app:queryHint="Pesquise citações, autores, músicas" />
 
             </com.google.android.material.appbar.CollapsingToolbarLayout>
 
