--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -155,7 +155,7 @@
 
                         <EditText
                             android:transitionName="quote"
-                            android:id="@+id/quote"
+                            android:id="@+id/quoteTextView"
                             android:hint="@string/quote"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
