--- a/app/src/main/res/layout/quotescard.xml
+++ b/app/src/main/res/layout/quotescard.xml
@@ -1,164 +1,164 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
-    <com.facebook.shimmer.ShimmerFrameLayout
-        android:id="@+id/topshimmer"
+    <data>
+
+        <variable
+            name="quote"
+            type="com.creat.motiv.model.Beans.Quote" />
+    </data>
+
+    <LinearLayout
+        android:id="@+id/card"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:shimmer_clip_to_children="true"
-        app:shimmer_highlight_color="@color/colorAccent"
-        app:shimmer_base_color="?android:textColorHint"
-        app:shimmer_direction="left_to_right"
-        app:shimmer_shape="linear"
-        app:shimmer_duration="500"
-        app:shimmer_repeat_mode="reverse"
-        app:shimmer_colored="true"
-        app:shimmer_auto_start="true"
-        >
+        android:layout_height="match_parent"
+        android:layout_margin="1dp"
+        android:layout_marginBottom="5dp"
+        android:animateLayoutChanges="true"
+        android:hapticFeedbackEnabled="true"
+        android:orientation="vertical">
+
         <LinearLayout
-            android:layout_margin="1dp"
-            android:id="@+id/card"
-            android:layout_height="wrap_content"
-            android:hapticFeedbackEnabled="true"
-            android:layout_marginBottom="5dp"
-            android:orientation="vertical"
+            android:id="@+id/quotedata"
             android:layout_width="match_parent"
-            android:animateLayoutChanges="true">
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <LinearLayout
-                android:visibility="gone"
-                android:gravity="center_vertical"
-                android:id="@+id/quotedata"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
+                android:orientation="vertical"
+                android:padding="4dp">
 
-                <de.hdodenhof.circleimageview.CircleImageView
-                    android:id="@+id/userpic"
-                    android:layout_width="40dp"
-                    android:transitionName="profilepic"
-                    android:layout_height="40dp"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:src="@drawable/ic_astronaut" />
-                <LinearLayout
-                    android:padding="4dp"
-                    android:orientation="vertical"
+                <TextView
+                    android:id="@+id/quoteDate"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
+                    android:layout_height="wrap_content"
+                    android:padding="5dp"
+                    android:textSize="12sp"
+                    android:textStyle="italic" />
+            </LinearLayout>
+        </LinearLayout>
+
+        <com.google.android.material.card.MaterialCardView
+            android:id="@+id/background"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:foreground="?attr/selectableItemBackground"
+            android:orientation="vertical"
+            app:cardBackgroundColor="@{quote.backgroundcolor}"
+            app:cardCornerRadius="15dp"
+            app:cardElevation="@dimen/cardview_default_elevation">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/fade_gradient"
+                    android:orientation="horizontal"
+                    android:paddingTop="8dp">
+
+                    <de.hdodenhof.circleimageview.CircleImageView
+                        android:id="@+id/userpic"
+                        android:layout_width="60dp"
+                        android:layout_height="40dp"
+                        android:foreground="?attr/selectableItemBackground"
+                        android:transitionName="profilepic"
+                        tools:src="@drawable/notfound" />
+
                     <TextView
-                        android:layout_gravity="center"
                         android:id="@+id/username"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:fontFamily="@font/lato_bold"
                         android:foreground="?attr/selectableItemBackground"
                         android:padding="5dp"
-                        android:textSize="12sp" />
-                    <TextView
+                        android:text="@{quote.username}"
+                        android:textColor="@color/white"
                         android:textSize="12sp"
-                        android:textStyle="italic"
-                        android:id="@+id/dia"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:padding="5dp" />
-                </LinearLayout>
-            </LinearLayout>
-
-            <androidx.cardview.widget.CardView
-                android:foreground="?attr/selectableItemBackground"
-                app:cardCornerRadius="10dp"
-                android:id="@+id/background"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                app:cardElevation="0dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:gravity="center"
-                    android:orientation="vertical">
-
-                    <TextView
-
-                        android:id="@+id/quote"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:backgroundTint="@color/transparent"
-                        android:padding="10dp"
-                        android:textAlignment="center"
-                        android:textSize="20sp"
-                        android:typeface="normal" />
-
-                    <TextView
-
-                        android:id="@+id/author"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:backgroundTint="@color/transparent"
-                        android:padding="10dp"
-                        android:textSize="18sp"
-                        android:typeface="normal" />
+                        tools:text="Caio Alves Ferreira" />
 
                 </LinearLayout>
-
-
-            </androidx.cardview.widget.CardView>
-
-
-
-            <RelativeLayout
-                android:visibility="invisible"
-                android:id="@+id/likes"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:padding="5dp">
-
-                <CheckBox
-                    android:id="@+id/like"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:background="@drawable/favoritecheck"
-                    android:button="@color/transparent"/>
 
                 <TextView
-                    android:layout_toEndOf="@id/like"
-                    android:id="@+id/likecount"
+                    android:id="@+id/quoteTextView"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:padding="16dp"
+                    android:text="@{quote.phrase}"
+                    android:textColor="@{quote.textcolor}"
+                    android:textSize="60sp"
+                    android:textStyle="bold"
+                    android:typeface="normal"
+                    tools:text="Everything I do \nI tell you all the time" />
+
+                <TextView
+                    android:id="@+id/author"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="2dp"
-                    android:layout_marginBottom="2dp" />
-
-                <ImageButton
-                    android:foreground="?attr/selectableItemBackground"
-                    android:id="@+id/share"
+                    android:layout_gravity="start"
+                    android:alpha="0.8"
                     android:backgroundTint="@color/transparent"
-                    android:src="@drawable/share"
-                    android:layout_alignParentEnd="true"
-                    android:layout_width="24dp"
-                    android:layout_height="24dp"
-                    android:layout_gravity="end|center" />
-            </RelativeLayout>
+                    android:padding="16dp"
+                    android:textColor="@{quote.textcolor}"
+                    android:textSize="24sp"
+                    android:typeface="normal"
+                    tools:text="Lana Del Rey" />
+
+            </LinearLayout>
 
 
+        </com.google.android.material.card.MaterialCardView>
 
 
+        <RelativeLayout
+            android:id="@+id/likes"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:padding="5dp"
+            android:visibility="invisible">
 
+            <CheckBox
+                android:id="@+id/like"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:background="@drawable/favoritecheck"
 
+                android:button="@color/transparent" />
 
+            <TextView
+                android:id="@+id/likecount"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginStart="2dp"
+                android:layout_marginBottom="2dp"
+                android:layout_toEndOf="@id/like" />
 
-
+            <ImageButton
+                android:id="@+id/share"
+                android:layout_width="24dp"
+                android:layout_height="24dp"
+                android:layout_alignParentEnd="true"
+                android:layout_gravity="end|center"
+                android:backgroundTint="@color/transparent"
+                android:foreground="?attr/selectableItemBackground"
+                android:src="@drawable/share" />
+        </RelativeLayout>
 
 
     </LinearLayout>
 
 
-</com.facebook.shimmer.ShimmerFrameLayout>
-
-    </layout>
+</layout>
 
 
