--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,5 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
 
     <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="userpicwidth">100dp</dimen>
 </resources>
