--- a/app/src/main/res/layout/color_card.xml
+++ b/app/src/main/res/layout/color_card.xml
@@ -1,14 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="30dp"
-    android:layout_height="30dp"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_margin="2dp"
-    android:id="@+id/colorcard"
-    app:cardElevation="0dp"
-    app:cardCornerRadius="15dp"
+    xmlns:tools="http://schemas.android.com/tools">
 
-    >
+    <data>
+
+        <variable
+            name="color"
+            type="Integer" />
+    </data>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/colorcard"
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:layout_margin="2dp"
+        android:stateListAnimator="@animator/list_animator"
+        app:cardBackgroundColor="@{color}"
+        app:cardCornerRadius="5dp"
+        app:cardElevation="0dp"
+        tools:backgroundTint="@color/colorPrimaryDark"
+
+        >
 
 
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+</layout>
