--- a/app/src/main/res/layout/delete_all_dialog.xml
+++ b/app/src/main/res/layout/delete_all_dialog.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:tools="http://schemas.android.com/tools">
+
     <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
+        android:layout_margin="20dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:maxWidth="250dp"
         app:cardElevation="0dp"
-        app:cardBackgroundColor="?android:colorBackground"
+        app:cardBackgroundColor="@color/white"
         android:orientation="vertical"
-        app:cardCornerRadius="10dp">
+        app:cardCornerRadius="15dp">
 
         <LinearLayout
             android:background="@color/transparent"
@@ -24,44 +25,28 @@
                 android:layout_width="match_parent"
                 android:layout_height="150dp"
                 android:layout_gravity="center"
+                tools:src="@drawable/flame_success"
                 android:src="@mipmap/ic_launcher" />
 
             <TextView
-
-                android:textColor="?android:textColorPrimary"
                 android:layout_margin="5dp"
                 android:id="@+id/message"
-                android:layout_width="match_parent"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                 android:padding="10dp"
-                android:text="Message"
+                android:padding="10dp"
+                android:textColor="@color/black"
+                tools:text="Parece que você está desconectado, conecte-se a internet e tente novamente"
                 android:textAlignment="center"
                 android:textSize="16sp" />
-            <LinearLayout
-                android:layout_gravity="center"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    style="@style/inversebutton"
-                    android:id="@+id/button"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Apagar"/>
-                <TextView
-                    style="@style/inversebutton"
-                    android:textAlignment="center"
-                    android:id="@+id/cancellbutton"
-                    android:backgroundTint="@color/red_600"
-                    android:textColor="@color/white"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:fontFamily="@font/lato_bold"
-                    android:text="cancelar"
-                    android:textStyle="bold" />
 
-            </LinearLayout>
+            <TextView
+                android:id="@+id/button"
+                style="@style/inversebutton"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Ok"
+                android:textStyle="bold" />
         </LinearLayout>
 
 
