--- a/app/src/main/res/layout/like_card.xml
+++ b/app/src/main/res/layout/like_card.xml
@@ -1,36 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="horizontal"
-    android:padding="5dp">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:id="@+id/userpic"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        android:layout_gravity="center"
-        android:alpha="0"
-        android:src="@drawable/penguin"
-        app:civ_border_color="@color/colorAccent"
-        app:civ_border_width="1dp" />
-    <TextView
-        android:alpha="0"
-        android:id="@+id/username"
-        android:layout_width="wrap_content"
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_marginStart="5dp"
-         android:text="@string/username"
-        android:textSize="14sp"
-        android:textStyle="bold" />
+        android:orientation="horizontal">
 
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@color/transparent"
-        android:src="@drawable/ic_flag_black_24dp"
-        android:visibility="gone" />
-</LinearLayout>
+        <include layout="@layout/user_view" />
+    </LinearLayout>
+</layout>
