--- a/app/src/main/res/layout/newquotepopup.xml
+++ b/app/src/main/res/layout/newquotepopup.xml
@@ -2,183 +2,161 @@
 
 
 <!-- TODO: Update blank fragment layout -->
-<layout>
-    <ScrollView
-        xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
+
+    <data>
+
+        <variable
+            name="quote"
+            type="com.creat.motiv.model.Beans.Quote" />
+    </data>
+
+    <RelativeLayout
         android:layout_width="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="match_parent">
-        <LinearLayout
+        android:layout_height="wrap_content">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/colorlibrary"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:orientation="horizontal"
+            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+            app:spanCount="3"
+            tools:itemCount="15"
+            tools:listitem="@layout/color_card" />
 
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/toolbar"
+        <ScrollView
+            android:id="@+id/quoteScroll"
+            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_below="@id/colorlibrary">
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/background"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:visibility="gone" />
-            <LinearLayout
-                android:visibility="gone"
-                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="horizontal">
-
-                <TextView
-                    android:id="@+id/fontid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:id="@+id/textcolorid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:visibility="invisible" />
-
-                <TextView
-                    android:id="@+id/backcolorid"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="0"
-                    android:visibility="invisible" />
-            </LinearLayout>
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/colorlibrary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/gradientlibrary"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content" />
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="5dp"
-                android:orientation="horizontal">
-
-                <ImageButton
-                    android:id="@+id/textcolorfab"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@drawable/round"
-                    android:backgroundTint="@color/transparent"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_format_color_text_black_24dp" />
-
-                <TextView
-                    android:id="@+id/font"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="5dp"
-                    android:background="@color/transparent"
-                    android:foreground="?attr/selectableItemBackground"
-                    android:padding="5dp"
-                    android:text="T"
-                    android:textSize="24sp" />
-
-                <ImageButton
-                    android:id="@+id/backcolorfab"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:background="@color/transparent"
-                    android:padding="10dp"
-                    android:src="@drawable/ic_format_color_fill_white_24dp" />
-
-            </LinearLayout>
-
-
-            <LinearLayout
-                android:layout_margin="10dp"
-                android:id="@+id/card"
-                android:layout_height="match_parent"
-                android:hapticFeedbackEnabled="true"
+                android:foreground="?attr/selectableItemBackground"
                 android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:animateLayoutChanges="true">
+                android:stateListAnimator="@animator/list_animator"
+                app:cardBackgroundColor="@{quote.backgroundcolor}"
+                app:cardCornerRadius="15dp"
+                app:cardElevation="@dimen/cardview_default_elevation"
+                tools:backgroundTint="@color/colorPrimaryDark">
 
                 <LinearLayout
-                    android:gravity="center_vertical"
-                    android:id="@+id/quotedata"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="vertical">
 
-                    <de.hdodenhof.circleimageview.CircleImageView
-                        android:id="@+id/userpic"
-                        android:layout_width="40dp"
-                        android:transitionName="profilepic"
-                        android:layout_height="40dp"
-                        android:foreground="?attr/selectableItemBackground"
-                        android:src="@drawable/ic_astronaut" />
-                    <LinearLayout
-                        android:padding="4dp"
-                        android:orientation="vertical"
+                    <include
+                        android:id="@+id/userTop"
+                        layout="@layout/user_view"
                         android:layout_width="match_parent"
-                        android:layout_height="wrap_content">
-                        <TextView
+                        android:layout_height="wrap_content" />
 
-                            android:layout_gravity="center"
-                            android:id="@+id/username"
-                            android:layout_width="match_parent"
+                    <EditText
+
+                        android:id="@+id/quoteTextView"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:background="@color/transparent"
+                        android:hint="@string/quote"
+                        android:importantForAutofill="no"
+                        android:padding="16dp"
+                        android:text="@{quote.phrase}"
+                        android:textColor="@{quote.textcolor}"
+                        android:textSize="50sp"
+                        android:textStyle="bold"
+                        android:typeface="normal" />
+
+                    <EditText
+                        android:id="@+id/author"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="start"
+                        android:alpha="0.8"
+                        android:background="@color/transparent"
+                        android:backgroundTint="@color/transparent"
+                        android:hint="@string/author"
+                        android:padding="16dp"
+                        android:text="@{quote.author}"
+                        android:textColor="@{quote.textcolor}"
+                        android:textSize="24sp"
+                        android:typeface="normal" />
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal"
+                        android:padding="8dp">
+
+                        <ImageButton
+                            android:id="@+id/textcolorfab"
+                            android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:fontFamily="@font/lato_bold"
+                            android:layout_gravity="center"
+                            android:alpha="0.8"
+                            android:background="@drawable/round"
+                            android:backgroundTint="@color/lwhite"
+                            android:contentDescription="Alterar cor do texto"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_format_color_text_black_24dp"
+                            android:tint="@{quote.textcolor}" />
+
+                        <TextView
+                            android:id="@+id/fontSelector"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_margin="5dp"
+                            android:alpha="0.8"
+                            android:background="@drawable/round"
+                            android:backgroundTint="@color/lwhite"
+                            android:contentDescription="Alterar fonte"
                             android:foreground="?attr/selectableItemBackground"
-                            android:padding="5dp"
-                            android:text="@string/username"
-                            android:textSize="12sp" />
+                            android:padding="10dp"
+                            android:paddingStart="16dp"
+                            android:paddingEnd="16dp"
+                            android:text="T"
+                            android:textSize="24sp" />
+
+                        <ImageButton
+                            android:id="@+id/backcolorfab"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:alpha="0.8"
+                            android:background="@drawable/round"
+                            android:backgroundTint="@color/lwhite"
+                            android:contentDescription="Alterar plano de fundo"
+                            android:padding="10dp"
+                            android:src="@drawable/ic_format_color_fill_white_24dp"
+                            android:tint="@{quote.backgroundcolor}" />
 
                     </LinearLayout>
+
+
                 </LinearLayout>
 
-                <androidx.cardview.widget.CardView
-                    android:foreground="?attr/selectableItemBackground"
-                    app:cardCornerRadius="10dp"
-                    android:id="@+id/background"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"
-                    app:cardElevation="0dp">
 
-                    <LinearLayout
-                        android:layout_height="match_parent"
-                        android:layout_width="match_parent"
-                        android:padding="15dp"
-                        android:gravity="center"
-                        android:orientation="vertical">
+            </com.google.android.material.card.MaterialCardView>
 
-                        <EditText
-                            android:transitionName="quote"
-                            android:id="@+id/quoteTextView"
-                            android:hint="@string/quote"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:backgroundTint="@color/transparent"
-                            android:padding="10dp"
-                            android:textAlignment="center"
-                            android:textSize="20sp"
-                            android:typeface="normal" />
+        </ScrollView>
 
-                        <EditText
-                            android:transitionName="author"
-                            android:id="@+id/author"
-                            android:hint="@string/author"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_gravity="center"
-                            android:backgroundTint="@color/transparent"
-                            android:padding="10dp"
-                            android:textSize="18sp"
-                            android:typeface="normal" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-            </LinearLayout>
-        </LinearLayout>
-    </ScrollView>
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/save_quote_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/quoteScroll"
+            android:backgroundTint="@color/colorAccent"
+            android:padding="16dp"
+            android:text="Salvar Frase"
+            android:textStyle="bold"
+
+            />
+
+    </RelativeLayout>
+
 </layout>
